k8s/media/radarr/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      component: radarr
  template:
    metadata:
      labels:
        component: radarr
    spec:
      containers:
        - name: radarr
          image: docker.io/linuxserver/radarr:4.1.0
          imagePullPolicy: Always
          ports:
            - name: radarr
              containerPort: 7878
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: 7878
            initialDelaySeconds: 10
            periodSeconds: 20
          volumeMounts:
            - name: media-data
              mountPath: /config
              subPath: config/radarr
            - name: media-data
              mountPath: /downloads
              subPath: downloads
            - name: media-data
              mountPath: /movies
              subPath: medias/movies
      volumes:
        - name: media-data
          persistentVolumeClaim:
            claimName: media-data
        - name: init-files-radarr
          configMap:
            defaultMode: 493
            name: init-radarr-cm
