k8s/media/radarr/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
spec:
  type: ClusterIP
  selector:
    component: radarr
  ports:
    - name: radarr
      port: 7878
      targetPort: radarr
