k8s/media/radarr/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: media-ingress-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
spec:
  rules:
  - host: radarr.media.k8s.prrlvr.fr
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: radarr
              port:
                name: radarr
  tls:
    - hosts:
        - radarr.media.k8s.prrlvr.fr
      secretName: radarr-media-tls
